syntax = "proto3";

package customer;

service CustomerService {
    rpc IsCustomer (CustomerRequest) returns (CustomerResponse) {}
}

message CustomerRequest {
    // ID do cliente
    string customer_id = 1;
}

message CustomerResponse {
    string msg = 1;
}
